--- a/docs/api/qiskit-ibm-transpiler/ai.mdx
+++ b/docs/api/qiskit-ibm-transpiler/ai.mdx
@@ -1,30 +1,30 @@
 ---
 title: ai
-description: API reference for qiskit_transpiler_service.ai
+description: API reference for qiskit_ibm_transpiler.ai
 in_page_toc_min_heading_level: 2
 python_api_type: module
-python_api_name: qiskit_transpiler_service.ai
+python_api_name: qiskit_ibm_transpiler.ai
 ---
 
-<span id="ai-qiskit-transpiler-service-ai" />
+<span id="ai-qiskit-ibm-transpiler-ai" />
 
-<span id="module-qiskit_transpiler_service.ai" />
+<span id="module-qiskit_ibm_transpiler.ai" />
 
 # AI
 
-<span id="module-qiskit_transpiler_service.ai" />
+<span id="module-qiskit_ibm_transpiler.ai" />
 
-`qiskit_transpiler_service.ai`
+`qiskit_ibm_transpiler.ai`
 
 ## Classes
 
-|                                                                                                                                                                       |                                                                                                                                     |
-| --------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------- |
-| [`AIRouting`](qiskit_transpiler_service.ai.AIRouting "qiskit_transpiler_service.ai.AIRouting")(\[backend\_name, coupling\_map, ...])                                  | The AIRouting pass acts both as a layout stage and a routing stage.                                                                 |
-| [`AICliffordSynthesis`](qiskit_transpiler_service.ai.AICliffordSynthesis "qiskit_transpiler_service.ai.AICliffordSynthesis")(backend\_name\[, ...])                   | Synthesis for Clifford circuits (blocks of H, S and CX gates).                                                                      |
-| [`AILinearFunctionSynthesis`](qiskit_transpiler_service.ai.AILinearFunctionSynthesis "qiskit_transpiler_service.ai.AILinearFunctionSynthesis")(backend\_name\[, ...]) | Synthesis for Linear Function circuits (blocks of CX and SWAP gates).                                                               |
-| [`AIPermutationSynthesis`](qiskit_transpiler_service.ai.AIPermutationSynthesis "qiskit_transpiler_service.ai.AIPermutationSynthesis")(backend\_name\[, ...])          | Synthesis for Permutation circuits (blocks of SWAP gates).                                                                          |
-| [`CollectCliffords`](qiskit_transpiler_service.ai.CollectCliffords "qiskit_transpiler_service.ai.CollectCliffords")(\[do\_commutative\_analysis, ...])                | Collects Clifford blocks as Instruction objects and stores the original sub-circuit to compare against it after synthesis.          |
-| [`CollectLinearFunctions`](qiskit_transpiler_service.ai.CollectLinearFunctions "qiskit_transpiler_service.ai.CollectLinearFunctions")(\[...])                         | Collects blocks of SWAP and CX as LinearFunction objects and stores the original sub-circuit to compare against it after synthesis. |
-| [`CollectPermutations`](qiskit_transpiler_service.ai.CollectPermutations "qiskit_transpiler_service.ai.CollectPermutations")(\[...])                                  | Collects blocks of SWAP circuits as Permutations.                                                                                   |
+|                                                                                                                                                               |                                                                                                                                     |
+| ------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------- |
+| [`AIRouting`](qiskit_ibm_transpiler.ai.AIRouting "qiskit_ibm_transpiler.ai.AIRouting")(\[backend\_name, coupling\_map, ...])                                  | The AIRouting pass acts both as a layout stage and a routing stage.                                                                 |
+| [`AICliffordSynthesis`](qiskit_ibm_transpiler.ai.AICliffordSynthesis "qiskit_ibm_transpiler.ai.AICliffordSynthesis")(backend\_name\[, ...])                   | Synthesis for Clifford circuits (blocks of H, S and CX gates).                                                                      |
+| [`AILinearFunctionSynthesis`](qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis "qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis")(backend\_name\[, ...]) | Synthesis for Linear Function circuits (blocks of CX and SWAP gates).                                                               |
+| [`AIPermutationSynthesis`](qiskit_ibm_transpiler.ai.AIPermutationSynthesis "qiskit_ibm_transpiler.ai.AIPermutationSynthesis")(backend\_name\[, ...])          | Synthesis for Permutation circuits (blocks of SWAP gates).                                                                          |
+| [`CollectCliffords`](qiskit_ibm_transpiler.ai.CollectCliffords "qiskit_ibm_transpiler.ai.CollectCliffords")(\[do\_commutative\_analysis, ...])                | Collects Clifford blocks as Instruction objects and stores the original sub-circuit to compare against it after synthesis.          |
+| [`CollectLinearFunctions`](qiskit_ibm_transpiler.ai.CollectLinearFunctions "qiskit_ibm_transpiler.ai.CollectLinearFunctions")(\[...])                         | Collects blocks of SWAP and CX as LinearFunction objects and stores the original sub-circuit to compare against it after synthesis. |
+| [`CollectPermutations`](qiskit_ibm_transpiler.ai.CollectPermutations "qiskit_ibm_transpiler.ai.CollectPermutations")(\[...])                                  | Collects blocks of SWAP circuits as Permutations.                                                                                   |
 
