--- a/docs/api/qiskit-ibm-transpiler/index.mdx
+++ b/docs/api/qiskit-ibm-transpiler/index.mdx
@@ -3,9 +3,9 @@ title: Qiskit Transpiler Service Client Docs
 description: API documentation for the qiskit-ibm-transpiler client
 ---
 
-# qiskit-transpiler-service API reference
+# qiskit-ibm-transpiler API reference
 
-*   [AI (`qiskit_transpiler_service.ai`)](ai)
-*   [Qiskit Transpiler Service (`qiskit_transpiler_service.transpiler_service`)](transpiler_service)
-*   [Utilities (`qiskit_transpiler_service.utils`)](utils)
+*   [AI (`qiskit_ibm_transpiler.ai`)](ai)
+*   [Qiskit IBM Transpiler (`qiskit_ibm_transpiler.transpiler_service`)](transpiler_service)
+*   [Utilities (`qiskit_ibm_transpiler.utils`)](utils)
 
