--- a/docs/api/qiskit-ibm-transpiler/qiskit_ibm_transpiler.ai.AICliffordSynthesis.mdx
+++ b/docs/api/qiskit-ibm-transpiler/qiskit_ibm_transpiler.ai.AICliffordSynthesis.mdx
@@ -1,21 +1,21 @@
 ---
-title: AILinearFunctionSynthesis
-description: API reference for qiskit_transpiler_service.ai.AILinearFunctionSynthesis
+title: AICliffordSynthesis
+description: API reference for qiskit_ibm_transpiler.ai.AICliffordSynthesis
 in_page_toc_min_heading_level: 1
 python_api_type: class
-python_api_name: qiskit_transpiler_service.ai.AILinearFunctionSynthesis
+python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
 ---
 
-# AILinearFunctionSynthesis
+# AICliffordSynthesis
 
-<Class id="qiskit_transpiler_service.ai.AILinearFunctionSynthesis" isDedicatedPage={true} signature="qiskit_transpiler_service.ai.AILinearFunctionSynthesis(backend_name: str, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.AICliffordSynthesis" isDedicatedPage={true} signature="qiskit_ibm_transpiler.ai.AICliffordSynthesis(backend_name: str, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
   Bases: `AISynthesis`
 
-  Synthesis for Linear Function circuits (blocks of CX and SWAP gates). Currently up to 9 qubit blocks.
+  Synthesis for Clifford circuits (blocks of H, S and CX gates). Currently up to 9 qubit blocks.
 
   **Parameters**
 
-  *   **backend\_name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")) – Name of the backend used for doing the AI Linear Function synthesis.
+  *   **backend\_name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")) – Name of the backend used for doing the AI Clifford synthesis.
   *   **replace\_only\_if\_better** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")*, optional*) – Determine if replace the original circuit with the synthesized one if it’s better, defaults to True.
   *   **max\_threads** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")*, optional*) – Set the number of requests to send in parallel.
 
@@ -23,14 +23,14 @@ python_api_name: qiskit_transpiler_service.ai.AILinearFunctionSynthesis
 
   ### execute
 
-  <Function id="qiskit_transpiler_service.ai.AILinearFunctionSynthesis.execute" signature="execute(passmanager_ir, state, callback=None)">
+  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.execute" signature="execute(passmanager_ir, state, callback=None)">
     Execute optimization task for input Qiskit IR.
 
     **Parameters**
 
     *   **passmanager\_ir** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.12)")) – Qiskit IR to optimize.
     *   **state** ([*PassManagerState*](/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v1.2)")) – State associated with workflow execution by the pass manager itself.
-    *   **callback** ([*Callable*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Callable "(in Python v3.12)") *| None*) – A callback function which is caller per execution of optimization task.
+    *   **callback** ([*Callable*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Callable "(in Python v3.12)")) – A callback function which is caller per execution of optimization task.
 
     **Returns**
 
@@ -43,7 +43,7 @@ python_api_name: qiskit_transpiler_service.ai.AILinearFunctionSynthesis
 
   ### name
 
-  <Function id="qiskit_transpiler_service.ai.AILinearFunctionSynthesis.name" signature="name()">
+  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.name" signature="name()">
     Name of the pass.
 
     **Return type**
@@ -53,7 +53,7 @@ python_api_name: qiskit_transpiler_service.ai.AILinearFunctionSynthesis
 
   ### run
 
-  <Function id="qiskit_transpiler_service.ai.AILinearFunctionSynthesis.run" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.run" signature="run(dag)">
     Run a pass on the DAGCircuit. This is implemented by the pass developer.
 
     **Parameters**
@@ -67,11 +67,11 @@ python_api_name: qiskit_transpiler_service.ai.AILinearFunctionSynthesis
 
   ### synth\_nodes
 
-  <Function id="qiskit_transpiler_service.ai.AILinearFunctionSynthesis.synth_nodes" signature="synth_nodes(nodes)" />
+  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.synth_nodes" signature="synth_nodes(nodes)" />
 
   ### update\_status
 
-  <Function id="qiskit_transpiler_service.ai.AILinearFunctionSynthesis.update_status" signature="update_status(state, run_state)">
+  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.update_status" signature="update_status(state, run_state)">
     Update workflow status.
 
     **Parameters**
