--- a/docs/api/qiskit-ibm-transpiler/qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.mdx
+++ b/docs/api/qiskit-ibm-transpiler/qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.mdx
@@ -1,17 +1,17 @@
 ---
-title: AIPermutationSynthesis
-description: API reference for qiskit_transpiler_service.ai.AIPermutationSynthesis
+title: AILinearFunctionSynthesis
+description: API reference for qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
 in_page_toc_min_heading_level: 1
 python_api_type: class
-python_api_name: qiskit_transpiler_service.ai.AIPermutationSynthesis
+python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
 ---
 
-# AIPermutationSynthesis
+# AILinearFunctionSynthesis
 
-<Class id="qiskit_transpiler_service.ai.AIPermutationSynthesis" isDedicatedPage={true} signature="qiskit_transpiler_service.ai.AIPermutationSynthesis(backend_name: str, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis" isDedicatedPage={true} signature="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis(backend_name: str, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
   Bases: `AISynthesis`
 
-  Synthesis for Permutation circuits (blocks of SWAP gates). Currently available for 65, 33, and 27 qubit blocks.
+  Synthesis for Linear Function circuits (blocks of CX and SWAP gates). Currently up to 9 qubit blocks.
 
   **Parameters**
 
@@ -23,14 +23,14 @@ python_api_name: qiskit_transpiler_service.ai.AIPermutationSynthesis
 
   ### execute
 
-  <Function id="qiskit_transpiler_service.ai.AIPermutationSynthesis.execute" signature="execute(passmanager_ir, state, callback=None)">
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.execute" signature="execute(passmanager_ir, state, callback=None)">
     Execute optimization task for input Qiskit IR.
 
     **Parameters**
 
     *   **passmanager\_ir** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.12)")) – Qiskit IR to optimize.
     *   **state** ([*PassManagerState*](/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v1.2)")) – State associated with workflow execution by the pass manager itself.
-    *   **callback** ([*Callable*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Callable "(in Python v3.12)") *| None*) – A callback function which is caller per execution of optimization task.
+    *   **callback** ([*Callable*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Callable "(in Python v3.12)")) – A callback function which is caller per execution of optimization task.
 
     **Returns**
 
@@ -43,7 +43,7 @@ python_api_name: qiskit_transpiler_service.ai.AIPermutationSynthesis
 
   ### name
 
-  <Function id="qiskit_transpiler_service.ai.AIPermutationSynthesis.name" signature="name()">
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.name" signature="name()">
     Name of the pass.
 
     **Return type**
@@ -53,7 +53,7 @@ python_api_name: qiskit_transpiler_service.ai.AIPermutationSynthesis
 
   ### run
 
-  <Function id="qiskit_transpiler_service.ai.AIPermutationSynthesis.run" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.run" signature="run(dag)">
     Run a pass on the DAGCircuit. This is implemented by the pass developer.
 
     **Parameters**
@@ -67,11 +67,11 @@ python_api_name: qiskit_transpiler_service.ai.AIPermutationSynthesis
 
   ### synth\_nodes
 
-  <Function id="qiskit_transpiler_service.ai.AIPermutationSynthesis.synth_nodes" signature="synth_nodes(nodes)" />
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.synth_nodes" signature="synth_nodes(nodes)" />
 
   ### update\_status
 
-  <Function id="qiskit_transpiler_service.ai.AIPermutationSynthesis.update_status" signature="update_status(state, run_state)">
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.update_status" signature="update_status(state, run_state)">
     Update workflow status.
 
     **Parameters**
