--- a/docs/api/qiskit-ibm-transpiler/qiskit_ibm_transpiler.ai.CollectLinearFunctions.mdx
+++ b/docs/api/qiskit-ibm-transpiler/qiskit_ibm_transpiler.ai.CollectLinearFunctions.mdx
@@ -1,14 +1,14 @@
 ---
 title: CollectLinearFunctions
-description: API reference for qiskit_transpiler_service.ai.CollectLinearFunctions
+description: API reference for qiskit_ibm_transpiler.ai.CollectLinearFunctions
 in_page_toc_min_heading_level: 1
 python_api_type: class
-python_api_name: qiskit_transpiler_service.ai.CollectLinearFunctions
+python_api_name: qiskit_ibm_transpiler.ai.CollectLinearFunctions
 ---
 
 # CollectLinearFunctions
 
-<Class id="qiskit_transpiler_service.ai.CollectLinearFunctions" isDedicatedPage={true} signature="qiskit_transpiler_service.ai.CollectLinearFunctions(do_commutative_analysis: bool = True, min_block_size: int = 4, max_block_size: int = LINEAR_MAX_BLOCK_SIZE, collect_from_back: bool = False, num_reps: int = 10)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.CollectLinearFunctions" isDedicatedPage={true} signature="qiskit_ibm_transpiler.ai.CollectLinearFunctions(do_commutative_analysis: bool = True, min_block_size: int = 4, max_block_size: int = LINEAR_MAX_BLOCK_SIZE, collect_from_back: bool = False, num_reps: int = 10)" modifiers="class">
   Bases: `RepeatedCollectAndCollapse`
 
   Collects blocks of SWAP and CX as LinearFunction objects and stores the original sub-circuit to compare against it after synthesis.
@@ -25,14 +25,14 @@ python_api_name: qiskit_transpiler_service.ai.CollectLinearFunctions
 
   ### execute
 
-  <Function id="qiskit_transpiler_service.ai.CollectLinearFunctions.execute" signature="execute(passmanager_ir, state, callback=None)">
+  <Function id="qiskit_ibm_transpiler.ai.CollectLinearFunctions.execute" signature="execute(passmanager_ir, state, callback=None)">
     Execute optimization task for input Qiskit IR.
 
     **Parameters**
 
     *   **passmanager\_ir** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.12)")) – Qiskit IR to optimize.
     *   **state** ([*PassManagerState*](/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v1.2)")) – State associated with workflow execution by the pass manager itself.
-    *   **callback** ([*Callable*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Callable "(in Python v3.12)") *| None*) – A callback function which is caller per execution of optimization task.
+    *   **callback** ([*Callable*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Callable "(in Python v3.12)")) – A callback function which is caller per execution of optimization task.
 
     **Returns**
 
@@ -45,7 +45,7 @@ python_api_name: qiskit_transpiler_service.ai.CollectLinearFunctions
 
   ### name
 
-  <Function id="qiskit_transpiler_service.ai.CollectLinearFunctions.name" signature="name()">
+  <Function id="qiskit_ibm_transpiler.ai.CollectLinearFunctions.name" signature="name()">
     Name of the pass.
 
     **Return type**
@@ -55,7 +55,7 @@ python_api_name: qiskit_transpiler_service.ai.CollectLinearFunctions
 
   ### run
 
-  <Function id="qiskit_transpiler_service.ai.CollectLinearFunctions.run" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.CollectLinearFunctions.run" signature="run(dag)">
     Run the CollectLinearFunctions pass on dag. :param dag: the DAG to be optimized. :type dag: DAGCircuit
 
     **Returns**
@@ -69,7 +69,7 @@ python_api_name: qiskit_transpiler_service.ai.CollectLinearFunctions
 
   ### update\_status
 
-  <Function id="qiskit_transpiler_service.ai.CollectLinearFunctions.update_status" signature="update_status(state, run_state)">
+  <Function id="qiskit_ibm_transpiler.ai.CollectLinearFunctions.update_status" signature="update_status(state, run_state)">
     Update workflow status.
 
     **Parameters**
