--- a/docs/api/qiskit-ibm-transpiler/qiskit_ibm_transpiler.transpiler_service.TranspilerService.mdx
+++ b/docs/api/qiskit-ibm-transpiler/qiskit_ibm_transpiler.transpiler_service.TranspilerService.mdx
@@ -1,14 +1,14 @@
 ---
 title: TranspilerService
-description: API reference for qiskit_transpiler_service.transpiler_service.TranspilerService
+description: API reference for qiskit_ibm_transpiler.transpiler_service.TranspilerService
 in_page_toc_min_heading_level: 1
 python_api_type: class
-python_api_name: qiskit_transpiler_service.transpiler_service.TranspilerService
+python_api_name: qiskit_ibm_transpiler.transpiler_service.TranspilerService
 ---
 
 # TranspilerService
 
-<Class id="qiskit_transpiler_service.transpiler_service.TranspilerService" isDedicatedPage={true} signature="qiskit_transpiler_service.transpiler_service.TranspilerService(optimization_level, ai='true', coupling_map=None, backend_name=None, qiskit_transpile_options=None, ai_layout_mode=None, **kwargs)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.transpiler_service.TranspilerService" isDedicatedPage={true} signature="qiskit_ibm_transpiler.transpiler_service.TranspilerService(optimization_level, ai='true', coupling_map=None, backend_name=None, qiskit_transpile_options=None, ai_layout_mode=None, **kwargs)" modifiers="class">
   Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.12)")
 
   Class for using the transpiler service.
@@ -26,7 +26,7 @@ python_api_name: qiskit_transpiler_service.transpiler_service.TranspilerService
 
   ### run
 
-  <Function id="qiskit_transpiler_service.transpiler_service.TranspilerService.run" signature="run(circuits)">
+  <Function id="qiskit_ibm_transpiler.transpiler_service.TranspilerService.run" signature="run(circuits)">
     Transpile the circuit(s) by calling the service /transpile endpoint.
 
     **Parameters**
