--- a/docs/api/qiskit-ibm-transpiler/0.4/utils.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.4/utils.mdx
@@ -1,26 +1,26 @@
 ---
 title: utils
-description: API reference for qiskit_ibm_transpiler.utils
+description: API reference for qiskit_transpiler_service.utils
 in_page_toc_min_heading_level: 2
 python_api_type: module
-python_api_name: qiskit_ibm_transpiler.utils
+python_api_name: qiskit_transpiler_service.utils
 ---
 
-<span id="utilities-qiskit-ibm-transpiler-utils" />
+<span id="utilities-qiskit-transpiler-service-utils" />
 
-<span id="module-qiskit_ibm_transpiler.utils" />
+<span id="module-qiskit_transpiler_service.utils" />
 
 # Utilities
 
-<span id="module-qiskit_ibm_transpiler.utils" />
+<span id="module-qiskit_transpiler_service.utils" />
 
-`qiskit_ibm_transpiler.utils`
+`qiskit_transpiler_service.utils`
 
 ## Functions
 
 ### create\_random\_linear\_function
 
-<Function id="qiskit_ibm_transpiler.utils.create_random_linear_function" signature="qiskit_ibm_transpiler.utils.create_random_linear_function(n_qubits, seed=123)">
+<Function id="qiskit_transpiler_service.utils.create_random_linear_function" signature="qiskit_transpiler_service.utils.create_random_linear_function(n_qubits, seed=123)">
   **Parameters**
 
   *   **n\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")) –
@@ -33,7 +33,7 @@ python_api_name: qiskit_ibm_transpiler.utils
 
 ### get\_metrics
 
-<Function id="qiskit_ibm_transpiler.utils.get_metrics" signature="qiskit_ibm_transpiler.utils.get_metrics(qc)">
+<Function id="qiskit_transpiler_service.utils.get_metrics" signature="qiskit_transpiler_service.utils.get_metrics(qc)">
   Returns a dict with metrics from a QuantumCircuit
 
   **Parameters**
