--- a/docs/open-source/best-practices.mdx
+++ b/docs/open-source/best-practices.mdx
@@ -9,33 +9,56 @@ If you have an idea for a Qiskit-based project, you'll often want to share it
 with the community. Putting your code online is a good start, but if a user
 can't work out how to install or use your project, they'll give up and move on.
 This page covers licensing, packaging, testing, and documenting your project,
-all of which improve users' experience. If you're releasing research code,
+all of which improve your users' experience. If you're releasing research code,
 following best practices will also help others reproduce your results.
 
-Once you've .... add your project to the ecosystem.
+Once you've polished it up, consider adding your project to the [Qiskit
+ecosystem](https://www.ibm.com/quantum/ecosystem).
 
 ## GitHub
 
-* GitHub actions
-* CI
-* Contributing guide
-* Code of conduct
-* Branch protection
-* Squash and merge
+Most Qiskit projects are hosted on [GitHub](https://github.com/), a source-code
+hosting platform. GitHub is based on [Git](https://git-scm.com/) (a version
+control system) and provides a large set of tools to help collaborate on your
+project and keep it to a high quality. See [Github
+skills](https://skills.github.com/) to get up to speed on GitHub quickly. The
+rest of this page will assume you have your project hosted on GitHub.
 
-### Security
+Some key features are:
 
-* Dependabot
-* 2FA
-* Branch protection
+* **Issues and Pull requests:** Users can use issues to report bugs in your
+  project or request changes to it. Your team and external contributors can use
+  pull requests to propose and review changes to your project.
+
+  If you want to accept contributions from others, make sure to add a
+  [contributing
+  guide](https://docs.github.com/en/communities/setting-up-your-project-for-healthy-contributions/setting-guidelines-for-repository-contributors)
+  and a [code of
+  conduct](https://docs.github.com/en/communities/setting-up-your-project-for-healthy-contributions/adding-a-code-of-conduct-to-your-project).
+
+* **GitHub actions:** This feature runs scripts when certain events happen in
+  your GitHub repo. For example, you can run your [test
+  suite](#test-your-project) when you push new code or automatically
+  [publishing your package](#publish-to-pypi) when you tag a commit.
+
+* **Security features:** These include
+  * [Dependabot](https://docs.github.com/en/code-security/dependabot/dependabot-security-updates/configuring-dependabot-security-updates)
+    – a tool to automatically update your dependencies.
+  * [Trusted publishing to PyPI](https://docs.pypi.org/trusted-publishers/) –
+    to reduce the risk of a malicious actor gaining control of your package.
+  * [Branch
+    protection](https://docs.github.com/en/repositories/configuring-branches-and-merges-in-your-repository/managing-protected-branches/about-protected-branches)
+    – to make sure code meets some criteria before being pushed to certain
+    branches.
 
 ## Choose a license
 
 If you want others to use your project, you *must* choose an appropriate
 license. Otherwise, your grant no permission for others to use it. Most
 projects in the [Qiskit ecosystem](https://www.ibm.com/quantum/ecosystem) use
-the Apache 2.0 or MIT licenses. Visit GitHub's [choosealicense.com](https://choosealicense.com) to
-decide which license is best for you.
+the Apache 2.0 or MIT licenses. Visit GitHub's
+[choosealicense.com](https://choosealicense.com) to decide which license is
+best for you.
 
 Add your license to the top level of your repository in a text file named
 `LICENSE`. When you create a new repository, GitHub will give you the option to
@@ -63,37 +86,39 @@ up your project with Poetry.
 
 ## Test your project
 
-Tests are small functions you'll write to make sure your code is working correctly.
-A test 
+Tests are small functions you'll write to make sure your code is working
+correctly. A good test suite makes working on your code easier; if the tests
+pass, your code is good. This means you can be confident you haven't broken
+anything when refactoring or adding new features. Seeing tests in a project's
+repository gives users more confidence in the stability of the project.
 
-* Tests ensure your code does a certain thing and should make development easier
-  * If the tests pass, your code is good
-  * Makes it easy to refactor or add new features
+The two most popular testing frameworks in Python are:
+* Python's built-in [`unittest`](https://docs.python.org/3/library/unittest.html)
+* [`pytest`](https://docs.pytest.org/en/stable/)
 
-* unittest or pytest
-* Setting up pytest w/ simple example
-
-* Mention tox in admonition for multiple python versions (not dep management)
+You can also consider using [`tox`](https://tox.wiki/en/4.18.0/) to test your
+project against different versions of Python.
 
 ## Code quality tools
 
-* ruff
-* mypy
-* bandit (Security linter)
-* others such as isort, pyupgrade
+A linter is a tool that detects (and sometimes corrects) common problems in
+your code. A popular linter for Python is
+[`ruff`](https://docs.astral.sh/ruff/). Other popular tools include
+[`mypy`](https://www.mypy-lang.org/) for type-checking, and
+[`bandit`](https://bandit.readthedocs.io/en/latest/) for security scanning.
 
-* Link to CI section
+Once you've set your tools up, you can use a [GitHub action](#github) to make
+sure all code pushed to your repository has been linted.
 
 ## Package your project
 
-* Makes it easy for users to install
-  * Good for adoption and reproducability
+Consider [packaging your Python
+project](https://packaging.python.org/en/latest/tutorials/packaging-projects/)
+to make it easy for others to install and use. You should also consider
+uploading your package to [PyPI](https://pypi.org/) so it can be installed
+through `pip`.
 
-* Packaging for PyPI (`pip install ...`)
-  * pyproject.toml (not setup.py)
-  * setuptools
-* Make it easy to release with an action
-  * check sphinx-theme (release guide) / rustworkx
-* Integrating with Qiskit
-  * Provider
-  * Transpiler plugin
+If your project is a transpiler plugin, see [Create a transpiler
+plugin](/guides/create-transpiler-plugin) to integrate correctly with Qiskit's
+transpiler. This makes it easy for users to incorporate your plugin into their
+Qiskit code.
