Updated references to use Qiskit IBM Catalog in the client side

--- a/docs/guides/serverless-port-code.mdx
+++ b/docs/guides/serverless-port-code.mdx
@@ -102,10 +102,10 @@ except Exception as e:
 ## Upload to Qiskit Serverless
 
 ```python
-from qiskit_serverless import IBMServerlessClient, QiskitFunction
+from qiskit_ibm_catalog import QiskitServerless, QiskitFunction
 
 # Authenticate to the remote cluster and submit the pattern for remote execution
-serverless = IBMServerlessClient(
+serverless = QiskitServerless(
     token=API_TOKEN
 )
 
