--- a/docs/guides/serverless-run-first-workload.ipynb
+++ b/docs/guides/serverless-run-first-workload.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "## List programs available\n",
     "\n",
-    "You can use [`ServerlessClient.list()`](https://qiskit.github.io/qiskit-serverless/stubs/qiskit_serverless.core.ServerlessClient.html#qiskit_serverless.core.ServerlessClient) to print out a list of the available programs to run with Qiskit Serverless."
+    "You can use `QiskitServerless.list()` to print out a list of the available programs to run with Qiskit Serverless."
    ]
   },
   {
@@ -40,8 +40,9 @@
     }
    ],
    "source": [
-    "from qiskit_serverless import IBMServerlessClient\n",
-    "serverless = IBMServerlessClient()\n",
+    "from qiskit_ibm_catalog import QiskitServerless\n",
+    "\n",
+    "serverless = QiskitServerless()\n",
     "serverless.list()"
    ]
   },
