--- a/docs/guides/serverless.mdx
+++ b/docs/guides/serverless.mdx
@@ -10,7 +10,7 @@ Qiskit Serverless provides a simple interface to run workloads across quantum-cl
 Premium users can build, deploy, and run their workloads remotely on classical compute made available through IBM Quantum Platform. Try out the tutorials in [IBM Quantum Learning](https://learning.quantum.ibm.com/catalog/tutorials?topics=qiskit-patterns) (note: these are accessible in the Premium Plan once you have logged into your IBM Quantum account).
 
 <Admonition type="note">
-    This preview feature is under frequent development, subject to change.
+    This is an experimental feature available only to the IBM Quantum Premium Plan.
 </Admonition>
 
 ## When should I use Qiskit Serverless?
@@ -23,10 +23,10 @@ Qiskit Serverless helps manage classical and quantum resources across the entire
 
 ## Install Qiskit Serverless
 
-To use Qiskit Serverless on IBM Quantum Platform, install the `qiskit-serverless` package:
+To use Qiskit Serverless on IBM Quantum Platform, install the `qiskit-ibm-catalog` package:
 
 ```bash
-pip install qiskit-serverless
+pip install qiskit-ibm-catalog
 ```
 
 This package requires `python` 3.11+. For users and organizations who want to run Serverless on custom infrastructure, follow the [Cloud infrastructure setup](https://qiskit.github.io/qiskit-serverless/cloud.html) guide.
