Added clarifying note about how each tool is used

--- a/docs/guides/serverless-run-first-workload.ipynb
+++ b/docs/guides/serverless-run-first-workload.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Run your first Serverless workload remotely\n",
     "\n",
-    "This section explores how to list programs available in Serverless, pass inputs into these programs, run them remotely, check their status, and retrieve results and logs.\n",
+    "This section explores how to use `qiskit-ibm-catalog` to list programs available in Serverless, pass inputs into these programs, run them remotely, check their status, and retrieve results and logs.\n",
     "\n",
     "Be sure you have authenticated to Qiskit Serverless with your [IBM Quantum account](https://quantum.ibm.com/account) (see [Deploy to IBM Quantum Platform](./serverless-first-program#deploy-to-ibm-quantum-platform) for instructions)."
    ]
