--- a/docs/guides/noise-learning.ipynb
+++ b/docs/guides/noise-learning.ipynb
@@ -25,7 +25,6 @@
     "from qiskit import QuantumCircuit\n",
     "from qiskit.transpiler import CouplingMap\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
-    "from qiskit.quantum_info import SparsePauliOp\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2\n",
     "from qiskit_ibm_runtime.noise_learner import NoiseLearner\n",
@@ -247,7 +246,7 @@
    "source": [
     "# Specify options via a dictionary\n",
     "options_dict = {'resilience_level':2,\n",
-    "                'resilience':{'layer_noise_model':result}}\n",
+    "                'resilience':{'layer_noise_model': noise_model}}\n",
     "\n",
     "estimator = EstimatorV2(mode=backend, options=options_dict)"
    ]
