admonition re: workloads table

--- a/docs/guides/serverless-run-first-workload.ipynb
+++ b/docs/guides/serverless-run-first-workload.ipynb
@@ -230,6 +230,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<Admonition type=\"tip\">\n",
+    "Currently, the IBM Quantum workloads table only reflects Qiskit Runtime workloads. Use `job.status()` to see your Qiskit Serverless workload's current status.\n",
+    "</Admonition>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "65566f2c-8d5b-4493-819b-4389155c3d69",
    "metadata": {},
    "source": [
