--- a/docs/guides/serverless.mdx
+++ b/docs/guides/serverless.mdx
@@ -33,7 +33,7 @@ qiskit_serverless
 `qiskit_ibm_catalog` provides the client-side tools to upload and run remote programs, while `qiskit_serverless` provides server-side tools to distribute compute and manage data. These packages require `python` 3.11+. For users and organizations who want to run Serverless on custom infrastructure, follow the [Cloud infrastructure setup](https://qiskit.github.io/qiskit-serverless/cloud.html) guide.
 
 <Admonition type="tip">
-Currently, Qiskit Serverless jobs are created, queued, and run separately to the IBM Quantum workloads table. Use `job.status()` to see your workload's current status instead.
+Currently, the IBM Quantum workloads table only reflects Qiskit Runtime workloads. Use `job.status()` to see your Qiskit Serverless workload's current status.
 </Admonition>
 
 ## Next steps
