tweak to fix non-parallel construction

--- a/docs/guides/serverless.mdx
+++ b/docs/guides/serverless.mdx
@@ -5,7 +5,7 @@ description: Use Qiskit Serverless to run quantum-classical workloads across the
 
 # What is Qiskit Serverless?
 
-Qiskit Serverless provides a simple interface to run workloads across quantum-classical resources. This includes deploying programs to the IBM Quantum&trade; Platform, running workloads remotely, and easy resource management for multi-cloud and quantum-centric supercomputing use cases.
+Qiskit Serverless provides a simple interface to run workloads across quantum-classical resources. This includes deploying programs to the IBM Quantum&trade; Platform and running workloads remotely, as well as easy resource management for multi-cloud and quantum-centric supercomputing use cases.
 
 Premium users can build, deploy, and run their workloads remotely on classical compute made available through IBM Quantum Platform. Try out the tutorials in [IBM Quantum Learning](https://learning.quantum.ibm.com/catalog/tutorials?topics=qiskit-patterns) (note: these are accessible in the Premium Plan once you have logged into your IBM Quantum account).
 
