--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -84,7 +84,7 @@
    "source": [
     "## Set up your files\n",
     "\n",
-    "Serverless requires setting up your workload’s `.py` files into a dedicated directory. The following structure is an example of good practice:\n",
+    "Qiskit Serverless requires setting up your workload’s `.py` files into a dedicated directory. The following structure is an example of good practice:\n",
     "\n",
     "```text\n",
     "serverless_program\n",
