--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -163,7 +163,7 @@
    "id": "8bd63bfc-0da5-46de-ace5-8463b5ad92f3",
    "metadata": {},
    "source": [
-    "Finally, you can set up running `transpile_remote()` across all `circuits` passed in, and return the `transpiled_circuits` as a result:"
+    "Finally, you can run `transpile_remote()` across all `circuits` passed in, and return the `transpiled_circuits` as a result:"
    ]
   },
   {
