--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -223,7 +223,7 @@
    "id": "7e8327dc-9105-4fb0-9cf0-c6e13ca32674",
    "metadata": {},
    "source": [
-    "Qiskit Serverless compresses the contents of `working_dir` (in this case, `source_files`) into a `tar`, which gets uploaded and cleaned up after. The `entrypoint` identifies the main program executable for Qiskit Serverless to run. Additionally, if your program has custom `pip` dependencies, you can add them to a `dependencies` array:"
+    "Qiskit Serverless compresses the contents of `working_dir` (in this case, `source_files`) into a `tar`, which is uploaded and cleaned up after. The `entrypoint` identifies the main program executable for Qiskit Serverless to run. Additionally, if your program has custom `pip` dependencies, you can add them to a `dependencies` array:"
    ]
   },
   {
