--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -300,7 +300,7 @@
     "\n",
     "<Admonition type=\"info\" title=\"Recommendations\">\n",
     "\n",
-    "- Learn how to pass inputs and run your program remotely in the [Run your first Serverless workload remotely](./serverless-run-first-workload) topic.\n",
+    "- Learn how to pass inputs and run your program remotely in the [Run your first Qiskit Serverless workload remotely](./serverless-run-first-workload) topic.\n",
     "\n",
     "</Admonition>"
    ]
