add link to patterns

--- a/docs/guides/serverless.mdx
+++ b/docs/guides/serverless.mdx
@@ -15,7 +15,7 @@ Premium users can build, deploy, and run their workloads remotely on classical c
 
 ## When should I use Qiskit Serverless?
 
-Qiskit Serverless helps manage classical and quantum resources across the entire Qiskit pattern workflow. This includes some of the following examples:
+Qiskit Serverless helps manage classical and quantum resources across the entire [Qiskit pattern](./intro-to-patterns) workflow. This includes some of the following examples:
 
 - Parallelizing classical tasks, such as pre-processing and post-processing
 - Persisting long-running workloads in the cloud, even if your laptop is turned off
