--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -323,8 +323,8 @@
     "\n",
     "<Admonition type=\"info\" title=\"Recommendations\">\n",
     "\n",
-    "- Review the [full guide](./serverless-port-code) to port your existing workload to leverage Qiskit Serverless.\n",
-    "- Explore how researchers used Qiskit Serverless and [quantum-centric supercomputing to explore quantum chemistry](https://arxiv.org/abs/2405.05068v1).\n",
+    "- Learn how to [port your existing code to Qiskit Serverless ](./serverless-port-code).\n",
+    "- Explore how researchers used Qiskit Serverless and quantum-centric supercomputing to [explore quantum chemistry](https://arxiv.org/abs/2405.05068v1).\n",
     "\n",
     "</Admonition>"
    ]
