--- a/docs/guides/monitor-job.mdx
+++ b/docs/guides/monitor-job.mdx
@@ -62,7 +62,7 @@ An execution span specifies which data was executed during its window by providi
 # Get the mask of the 1st PUB for the 0th span.
 mask = spans[0].mask(1)
 
-# Decide whether the 0th shot of parameter set (1, 2) occured in this span.
+# Decide whether the 0th shot of parameter set (1, 2) occurred in this span.
 in_this_span = mask[1, 2, 0]
 
 # Create a new bit array containing only the PUB-1 data collected during this span.
@@ -79,7 +79,7 @@ for span in spans:
      print(span)
 ```
 
-Excution spans can be filtered to include information pertaining to specific PUBs, selected by their indices:
+Execution spans can be filtered to include information pertaining to specific PUBs, selected by their indices:
 
 ```python
 # take the subset of spans that reference data in PUBs 0 or 2
