--- a/docs/guides/monitor-job.mdx
+++ b/docs/guides/monitor-job.mdx
@@ -50,6 +50,7 @@ You can cancel a job from the IBM Quantum Platform dashboard either on the Jobs 
 
 In Qiskit, use `job.cancel()` to cancel a job.
 
+<span id="execution-spans"></span>
 ## View Sampler execution spans
 
 The results of `SamplerV2` jobs executed in Qiskit Runtime contain execution timing information in their metadata.
