--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -466,6 +466,13 @@
     "for key, val in result[0].metadata.items():\n",
     "    print(f\"'{key}' : {val},\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For Sampler jobs, you can also review the result metadata to understand when certain data was run; called the [_execution span._](monitor-job#execution-spans)"
+   ]
   }
  ],
  "metadata": {
