update latest blog entry

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -5,7 +5,7 @@ description: The latest updates from Qiskit and IBM Quantum, including the lates
 
 # Latest updates
 
-*Last updated 15 August 2024*
+*Last updated 6 September 2024*
 {/* remember to update the date in the previous line each time this page is updated!!! */}
 
 Keep up with the latest and greatest from Qiskit and IBM Quantum&trade;! Gathered here are the the most recent Qiskit package release summaries, documentation updates, blogs, community events, and more.
@@ -92,19 +92,19 @@ Probabilistic error amplification (PEA) error mitigation method is now available
 
 Qiskit Runtime primitives now support OpenQASM 3 as the input format for circuits and standard JSON output format. See [Qiskit Runtime REST API](/api/runtime) for examples.
 
-## IBM Quantum blog: Defining — and citing — the Qiskit SDK
+## IBM Quantum blog: Qiskit Serverless sets the stage for Qiskit Functions in the cloud
 
 *Browse all blogs at the [IBM Quantum blog page](https://www.ibm.com/quantum/blog).*
 
 {/* Bring over the Quantum news (blog) announcement post */}
 
-Since its launch in 2017, researchers have used the Qiskit SDK to write thousands of papers in the fields of quantum information science and engineering. However, those researchers have also lacked a definitive, authoritative academic citation that explains what the Qiskit SDK and how it enables their experiments —  until now.
+[This week on the IBM Quantum blog](https://www.ibm.com/quantum/blog/qiskit-serverless), we're taking a fresh look at Qiskit Serverless, a programming model that empowers users to leverage both quantum and classical resources in a cloud environment. We've made a number of improvements to Qiskit Serverless since its debut at IBM Quantum Summit 2023, and have recently expanded and updated the [Qiskit Serverless documentation](/guides/serverless) to simplify the process of getting started with it.
 
-[“Quantum computing with Qiskit,”](https://arxiv.org/abs/2405.08810) a paper published recently on arXiv, fills this gap by providing the research community with a succinct overview of the SDK’s architecture and core components. It also offers fascinating insight into the design philosophy that has informed the Qiskit SDK’s development since its earliest days, and delivers a detailed, end-to-end example of a workflow that uses Qiskit to solve a challenging problem in condensed matter physics.
+Qiskit Serverless is a useful tool for performing complex, long-running tasks, and for running workflows that are intended to be executed on a regular basis. You can scale quantum jobs by running them across multiple quantum and classical compute resources, meaning you can continue to efficiently execute your workflows even after you’ve hit the resource limits of the local machine you use for quantum experiments.
 
-The authors of “Quantum computing with Qiskit” include developers who helped build the very first version of Qiskit in 2017, and who have seen firsthand how it has grown into the sophisticated, versatile tool it is today. Their hope is that the paper will serve as a convenient, citable source that helps researchers better understand what Qiskit is and how it is used for quantum information science.
+In the blog, we take a closer look at how users can take advantage of these capabilities, explain how Qiskit Serverless actually works, and give readers an inside look at the improvements we’ve been making to it over the past several months.
 
-For more details on the new paper, including key takeaways and example citations, be sure to read [our recent post on the IBM Quantum blog](https://www.ibm.com/quantum/blog/defining-and-citing-the-qiskit-sdk), or read [the full paper on arXiv](https://arxiv.org/abs/2405.08810).
+*On the IBM Quantum blog: [Qiskit Serverless sets the stage for Qiskit Functions in the cloud](https://www.ibm.com/quantum/blog/qiskit-serverless)*
 
 ## What's new in the documentation
 
