add/update a couple infra things

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -134,7 +134,7 @@ IBM Quantum documentation recently added a number of user-facing improvements, i
 
 - [Qiskit SDK v1.2](../api/qiskit/release-notes/1.2)
 - [Qiskit Runtime v0.28](../api/qiskit-ibm-runtime/release-notes#0280-2024-08-15)
-- [qiskit-ibm-transpiler v0.4 ](../api/qiskit-ibm-transpiler/transpiler_service) 
+- [qiskit-ibm-transpiler v0.5](../api/qiskit-ibm-transpiler/transpiler_service) 
 
 ### User experience improvements
 
@@ -145,6 +145,8 @@ IBM Quantum documentation recently added a number of user-facing improvements, i
 - Alt-text has been added to all images to make them more accessible.
 - Heading size has been adjusted so that it does not change when the screen size changes.
 - Code styling has been improved, including bigger fonts and better contrast for code block comments.
+- In Search, you can now filter out terms by prefixing it with `-`, such as `-qiskit`
+- When on outdated versions of docs, the link in the top banner to take you to the latest version now preserves the page you were on.
 
 *A huge thank you goes out to everyone in the open-source community who contributed and gave feedback!* Please [open an issue](https://github.com/Qiskit/documentation/issues/new/choose) if you find a bug, have a suggestion, or want to share your experience.
 
