Add some prompt suggestions

--- a/docs/guides/construct-circuits.ipynb
+++ b/docs/guides/construct-circuits.ipynb
@@ -462,6 +462,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ae19e48d",
+   "metadata": {},
+   "source": [
+    "<CodeAssistantAdmonition>\n",
+    "Forgotten the method name? Try asking the Qiskit Code Assistant!\n",
+    "* `# Assign all parameters in qc to 0`\n",
+    "</CodeAssistantAdmonition>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5af44bc3",
    "metadata": {},
    "source": [
