--- a/docs/guides/plot-quantum-states.ipynb
+++ b/docs/guides/plot-quantum-states.ipynb
@@ -446,7 +446,13 @@
     "- **title** (str): a string for the plot title, displayed at the top of the plot\n",
     "- **figsize** (tuple): figure size in inches (width, height)\n",
     "\n",
-    "The `plot_state_city` and `plot_state_paulivec` functions also accept a **color** argument (list of strings) specifying the colors of the bars. See the [API documentation](/api/qiskit/visualization) for more information."
+    "The `plot_state_city` and `plot_state_paulivec` functions also accept a **color** argument (list of strings) specifying the colors of the bars. See the [API documentation](/api/qiskit/visualization) for more information.\n",
+    "\n",
+    "<CodeAssistantAdmonition>\n",
+    "Can't remember the name of the plotting function you need? Try asking the Qiskit Code Assistant!\n",
+    "* `# Plot psi on a Bloch sphere`\n",
+    "* `# Plot a qsphere of psi with title \"Psi\"`\n",
+    "</CodeAssistantAdmonition>"
    ]
   },
   {
