--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -108,6 +108,16 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<CodeAssistantAdmonition>\n",
+    "Always forgetting how to retrieve a job? Try this prompt with the Qiskit Code Assistant!\n",
+    "* `# Retrieve job JOB_ID from IBM Runtime and print the result`\n",
+    "</CodeAssistantAdmonition>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "211b8c15-5aa3-43f6-82ee-2bd1d49ae8fc",
    "metadata": {},
    "source": [
