--- a/docs/guides/setup-channel.mdx
+++ b/docs/guides/setup-channel.mdx
@@ -92,6 +92,11 @@ Available plans:
     IBM Cloud is the default account used if you don't specify a different channel or account name.
     </Admonition>
 
+    <CodeAssistantAdmonition>
+    If you forget the setup code, try asking the Qiskit Code Assistant.
+    * `# Set up my IBM Runtime account using TOKEN for my token`
+    </CodeAssistantAdmonition>
+
 1. Test your setup.  Run a simple circuit using Sampler to ensure that your environment is set up properly:
 
   ```python
