--- a/docs/guides/transpile-with-pass-managers.ipynb
+++ b/docs/guides/transpile-with-pass-managers.ipynb
@@ -102,6 +102,13 @@
    "source": [
     "See [Transpilation defaults and configuration options](defaults-and-configuration-options) for a description of the possible arguments to the `generate_preset_pass_manager` function. The arguments to `generate_preset_pass_manager` match the arguments to the [`transpile`](/api/qiskit/compiler#qiskit.compiler.transpile) function.\n",
     "\n",
+    "<CodeAssistantAdmonition>\n",
+    "Bad at remembering? Try asking the Qiskit Code Assistant.\n",
+    "* `# Create a pass manager with the highest optimization level`\n",
+    "* `# Transpile 'circuit' with the highest optimization level`\n",
+    "</CodeAssistantAdmonition>\n",
+    "\n",
+    "\n",
     "If the preset pass managers don't fulfill your needs, customize transpilation by creating (staged) pass managers or even transpilation passes. The rest of this page describes how to create pass managers. For instructions on how to create transpilation passes, see [Write your own transpiler pass](custom-transpiler-pass)."
    ]
   },
