metadata was too short

--- a/docs/guides/online-lab-environments.mdx
+++ b/docs/guides/online-lab-environments.mdx
@@ -1,6 +1,6 @@
 ---
 title: Online lab environments
-description: Set up an online lab environment
+description: Set up an online lab environment to use Qiskit in the cloud. Choose a preconfigured environment or set up your own.
 
 ---
 <span id="online-environments"></span>
