--- a/docs/guides/online-lab-environments.mdx
+++ b/docs/guides/online-lab-environments.mdx
@@ -76,7 +76,7 @@ For platforms without Qiskit preconfigured, the setup instructions are similar, 
 <Admonition type="tip" title="Recommendations">
   -  [OVH Cloud documentation](https://help.ovhcloud.com/csm/en-documentation?id=kb_home)
   -  [qBraid Lab documentation](https://docs.qbraid.com/home/introduction)
-  -  [IBM Watson studio documentation](https://cloud.ibm.com/developer/watson/documentation)
-  -  [Google Colab documentation](chttps://colab.research.google.com/)
+  -  [IBM Watson studio documentation](https://dataplatform.cloud.ibm.com/docs/content/svc-welcome/wsl.html?context=cpdaas)
+  -  [Google Colab documentation](https://colab.research.google.com/)
   -  [Microsoft Azure Machine Learning Studio documentation](https://learn.microsoft.com/en-us/azure/machine-learning/?view=azureml-api-2)
 </Admonition>
